--- a/proj_duanyou/src/main/res/values/strings.xml
+++ b/proj_duanyou/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">段友</string>
     <string name="no_more">没有更多了</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
